@@ -31,7 +31,7 @@ enum {MENUNEW=0,MENUOPEN,MENUOPENHEX,MENUNEWADMIN,MENUNEWED,MENUMANED,MENUDOXY,M
 MENUTOGGLENUMBERS,MENUWRAPLINES,MENUHILITELINE,MENUSYNTAXHILITE,MENUSHOWSPACE,MENUSHOWCOMPS \
 ,MENUGOTODEF,MENUOPENINC,MENUGOTOLINE,MENUSEARCHDEF,MENUSEARCHGTK,MENUSEARCHQT,MENUSEARCHDOXY,MENUBACK,MENUFORWARD,MENUCONTINUE,MENUTOOLS,MENUABOUT,MENULOCALHELP,MENUONLINE,MENUGETPLUGS, \
 POPADDCUSTOM,MENUBLANK,MENUSPELLCHECK, \
-TABFOLDERPATH,TABFILEPATH,TABFILENAME,TABSPELLCHECK,TABSRCHILITE,TABHIDE \
+TABFOLDERPATH,TABFILEPATH,TABFILENAME,TABSPELLCHECK,TABSRCHILITE,TABHIDE,TABLOCK \
 };
 
 struct	menuDataStruct
